--- a/b2devel/war/B2devel.html
+++ b/b2devel/war/B2devel.html
@@ -24,6 +24,16 @@
     <!-- be added before this line.                -->
     <!--                                           -->
     <script type="text/javascript" language="javascript" src="b2devel/b2devel.nocache.js"></script>
+
+	<script type="text/javascript" language="javascript">
+	var getElementByXpath = function (path) {
+	    return document.evaluate(path, document, null, 9, null).singleNodeValue;
+	};
+	var fit = function(){
+		var listViewPane = getElementByXpath("/html/body/div[2]/div[2]/div/div[4]/div/div");
+		listViewPane.style.height = "100%";
+	}
+	</script>
   </head>
 
   <!--                                           -->
@@ -31,7 +41,7 @@
   <!-- you can leave the body empty if you want  -->
   <!-- to create a completely dynamic UI.        -->
   <!--                                           -->
-  <body>
+  <body onload="fit();">
 
     <!-- OPTIONAL: include this if you want history support -->
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
@@ -43,19 +53,5 @@
         in order for this application to display correctly.
       </div>
     </noscript>
-  
-    <div id="viewer"></div>
   </body>
 </html>
-<!--    <table width="100" height="100" align="center">
-      <tr>
-        <td id="sendButtonContainer"></td>
-      </tr>
-      <tr>
-        <td style="color:red;" id="errorLabelContainer"></td>
-      </tr>
-      <tr>
-        <td style="color:red;" id="viewer"></td>
-      </tr>
-    </table>  
- -->
